# polymath-web

./: .context.md  .gitignore  CLAUDE.md  README.md  SPEC-01-SYSTEM-OVERVIEW.md  SPEC-02-OBSIDIAN-STRUCTURE.md  SPEC-03-CLI-TOOLS.md  SPEC-04-DATA-FILES.md  SPEC-05-IMPLEMENTATION-GUIDE.md  SPEC-06-ALGORITHMS-DEEP-DIVE.md  autopilot_log.md  pyproject.toml
.claude/: settings.local.json
archive/: pyproject.toml
archive/pm/: cli.py  config.py
archive/pm/commands/: __init__.py  connections.py  init.py  log.py  next_cmd.py  pair.py
archive/pm/core/: bisociation.py  supabase_client.py
archive/pm/data/: domains.py  templates.py
archive/polymath-web-lib/: bisociation.ts  copy-button.tsx  distance.ts  hub-books.ts  traversal.ts
archive/polymath-web-pages/log/: page.tsx
archive/polymath-web-pages/pair/: error.tsx  page.tsx
archive/tests/: conftest.py  test_traversal.py
docs/: checkpoint.md  plan.md
docs/checkpoints/: 01-supabase.md  02-cli-supabase.md  03-frontend-setup.md  04-core-pages.md  05-polish.md  06-deploy.md
pm/: __init__.py  cli.py
pm/commands/: distance.py  gaps.py  log.py  status.py
pm/core/: __init__.py  book.py  daily_log.py  domain.py  errors.py  traversal.py  vault.py
pm/data/: __init__.py  distances.py  hub_books.py
polymath-web/: ARCHITECTURE.md  package-lock.json  package.json  project_status.md
polymath-web/docs/: architecture.md  checkpoint.md  future_roadmap.md  init_considerations.md  plan.md
polymath-web/src/app/: error.tsx  layout.tsx  page.tsx
polymath-web/src/components/: branch-list.tsx  command-palette.tsx  current-book.tsx  domain-card.tsx  (+10 more)
rebuild_spec/: polymath-rebuild-spec.md
tests/: __init__.py  test_bisociation.py  test_cli_integration.py  test_distance.py
(+22 files in other folders)
